# jira-issue-creator

./: README.md  jira_creator  main.py  pyproject.toml
jira_issue_creator/: jira_issue.py  utils.py
tests/: test_jira_issue_creator.py
